@@ -1,5 +1,8 @@
 Release CMTK-1.3.1:
 
+- API: renamed "GetDownsampled" member in DataGrid and UniformVolume classes
+    to "GetDownsampledAndAveraged" to clarify that this is a
+    downsampling-and-averaging operation, not just a downsampling.
 - Refactored: greatly improved handling of grid index and region types.
 - Added: SmartConstPointer, based on concepts in Meyer's "More Effective C++"
     book.
